objects/Product2/fields/ApheresisMaterialCodeFresh__c.field-meta.xml
<CustomField>
    <fullName>ApheresisMaterialCodeFresh__c</fullName>
    <description>If the cryo type is local, then the fresh apheresis cell material code will be captured</description>
    <label>Apheresis Material Code Fresh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>