objects/Product2/fields/ApheresisMaterialCodeFrozen__c.field-meta.xml
<CustomField>
    <fullName>ApheresisMaterialCodeFrozen__c</fullName>
    <description>If the cryo type is central/raritan, then the cells will be cryo-preserved and their material no will be captured</description>
    <label>Apheresis Material Code Frozen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>