objects/Product2/fields/MaterialNoFG__c.field-meta.xml
<CustomField>
    <fullName>MaterialNoFG__c</fullName>
    <description>The field is used to track the material no for the finished good</description>
    <label>Material No FG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>