objects/Product2/fields/QuantityAphersis__c.field-meta.xml
<CustomField>
    <fullName>QuantityAphersis__c</fullName>
    <description>The quantity of the Apheresed cells will be captured here</description>
    <label>Quantity Aphersis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>