objects/Product2/fields/QuantityFG__c.field-meta.xml
<CustomField>
    <fullName>QuantityFG__c</fullName>
    <description>The quantity of the finished good will be captured here</description>
    <label>Quantity FG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>