objects/Product2/fields/SalesOrderType__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderType__c</fullName>
    <description>Defines the types of sales order like verified sales order or new sales order etc.</description>
    <label>Sales Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>