objects/Product2/fields/TherapyType__c.field-meta.xml
<CustomField>
    <fullName>TherapyType__c</fullName>
    <description>It displays Therapy type for the product.</description>
    <label>Therapy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>