objects/Product2/fields/UOMApheresis__c.field-meta.xml
<CustomField>
    <fullName>UOMApheresis__c</fullName>
    <description>Defines the unit of measurement for apheresed cells</description>
    <label>UOM Apheresis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>