objects/Product2/fields/UOMFG__c.field-meta.xml
<CustomField>
    <fullName>UOMFG__c</fullName>
    <description>Defines the unit output for the manufactured cells</description>
    <label>UOM Finished Goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>